--- a/app/views/layouts/blogconfigs.html.erb
+++ b/app/views/layouts/blogconfigs.html.erb
@@ -5,7 +5,7 @@
         <%= csrf_meta_tags %>
         
         <%= stylesheet_link_tag "blogconfigs",
-        "data-turbolonks-track": "reload" %>
+        "data-turbolinks-track": "reload" %>
         <%= javascript_include_tag "blogconfigs",
         "data-turbolinks-track": "reload" %>
     </head>
