--- a/app/views/layouts/blogposts.html.erb
+++ b/app/views/layouts/blogposts.html.erb
@@ -5,7 +5,7 @@
         <%= csrf_meta_tags %>
 
         <%= stylesheet_link_tag "blogposts",
-        "data-turbolonks-track": "reload" %>
+        "data-turbolinks-track": "reload" %>
         <%= javascript_include_tag "blogposts",
         "data-turbolinks-track": "reload" %>
     </head>
