--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -19,8 +19,8 @@
 
 
 
-<%= form_tag url:({controller:"blogs", action:"search"}) do %>
-<%= select_tag(:year, options_for_select([["新しい順","新しい順"],["古い順","古い順"]])) %>
+<%= form_tag(controller:"blogs", action:"index") do %>
+<%= select_tag(:id, options_for_select([["新しい順","新しい順"],["古い順","古い順"]])) %>
 <%= submit_tag "絞り込み" %>
 <% end %>
 
