--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -7,3 +7,6 @@
 <% end %>
 </div>
 <p class="show_created">(<%= @blogpost.created_at %>)</p>
+
+<strong>閲覧数:</strong>
+<%=  @tweet.impressionist_count %>
