--- a/app/views/blogposts/edit.html.erb
+++ b/app/views/blogposts/edit.html.erb
@@ -17,6 +17,9 @@
     <td><%= form.text_area :content,{cols:40,rows:10} %></td></tr>
 <tr><th>Genre ID</th>
     <td><%= form.text_field :bloggenre_id %></td></tr>
+<tr><th>count</th>
+    <td><%= form.number_field :count %></td></tr>
+
 <tr><th></th>
     <td><%= form.submit "送信" %></td></tr>
     <% end %>
