--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -9,4 +9,4 @@
 <p class="show_created">(<%= @blogpost.created_at %>)</p>
 
 <strong>閲覧数:</strong>
-<%=  @tweet.impressionist_count %>
+<%=  @blogpost.count %>
