--- a/app/views/blogposts/index.html.erb
+++ b/app/views/blogposts/index.html.erb
@@ -3,7 +3,7 @@
 <table>
     <tr>
         <th>Id</th><th >title</th><th>read</th>
-            <th>genre</th><th colspan="2"></th>
+            <th>genre</th><th>count</th>><th colspan="2"></th>
         </tr>
         <% @data.each do |obj| %>
     <tr>
@@ -11,9 +11,18 @@
         <td><%=obj.title %></td>
         <td><%=obj.read %></td>
         <td><%=obj.bloggenre.name%></td>
+        <td><%=obj.count %></td>
+
         <td><a href="/blogposts/<%= obj.id %>">Edit</a></td>
         <td><a href="/blogposts/delete/<%= obj.id %>">Delete</a></td>
     </tr>
     <% end %>
+
+<%= form_tag(controller:"blogposts", action:"index") do %>
+<%= select_tag(:id, options_for_select([["新しい順","新しい順"],["古い順","古い順"],["閲覧数の多い順","閲覧数の多い順"]])) %>
+<%= submit_tag "並び替え" %>
+<% end %>
+
+
 </table>
 <p><a href="/blogposts/add">新規作成>＞＞</a></p>
